--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h2::after {
     position: fixed;
     top: 0;
     width: 100%;
-    background: rgba(255, 255, 255, 0.95);
+    background: Linear-gradient(blue,red);
     backdrop-filter: blur(10px);
     z-index: 1000;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -455,4 +455,5 @@ h2::after {
         margin: 0 5px;
         font-size: 0.9rem;
     }
+
 }
