--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: var(--dark);
-    background: var(--white);
+    background: linear-gradient(red,blue);
 }
 
 .container {
@@ -457,3 +457,4 @@ h2::after {
     }
 
 }
+
